[tool.poetry]
name = "flask api gateway"
version = "0.1.0"
description = ""
authors = ["Andrés Jaimovich"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
Flask-JWT-Extended = "^4.6.0"
Flask-Limiter = "^3.8.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
